@@ -38,8 +38,8 @@ data:extend({{
     },
     fuel_category = "electrical",
     fuel_value = "120MJ",
-    fuel_acceleration_multiplier_quality_bonus = 0.5,
-    fuel_top_speed_multiplier_quality_bonus = 0.5,
+    fuel_acceleration_multiplier_quality_bonus = 0.25,
+    fuel_top_speed_multiplier_quality_bonus = 0.25,
     burnt_result = "",
     subgroup = "intermediate-product",
     order = "s-a[battery-pack]",
@@ -67,8 +67,8 @@ data:extend({{
     },
     fuel_category = "electrical",
     fuel_value = "40MJ",
-    fuel_acceleration_multiplier_quality_bonus = 0.5,
-    fuel_top_speed_multiplier_quality_bonus = 0.5,
+    fuel_acceleration_multiplier_quality_bonus = 0.25,
+    fuel_top_speed_multiplier_quality_bonus = 0.25,
     burnt_result = "electric-train-discharged-battery-pack",
     subgroup = "intermediate-product",
     order = "s-b[battery-pack]",
@@ -104,8 +104,8 @@ data:extend({{
     fuel_value = "32MJ",
     fuel_top_speed_multiplier = 1.5,
     fuel_acceleration_multiplier = 0.8,
-    fuel_acceleration_multiplier_quality_bonus = 0.5,
-    fuel_top_speed_multiplier_quality_bonus = 0.5,
+    fuel_acceleration_multiplier_quality_bonus = 0.25,
+    fuel_top_speed_multiplier_quality_bonus = 0.25,
     burnt_result = "discharged-speed-battery-pack",
     subgroup = "intermediate-product",
     order = "s-d[battery-pack]",
@@ -141,8 +141,8 @@ data:extend({{
     fuel_value = "32MJ",
     fuel_top_speed_multiplier = 0.8,
     fuel_acceleration_multiplier = 1.5,
-    fuel_acceleration_multiplier_quality_bonus = 0.5,
-    fuel_top_speed_multiplier_quality_bonus = 0.5,
+    fuel_acceleration_multiplier_quality_bonus = 0.25,
+    fuel_top_speed_multiplier_quality_bonus = 0.25,
     burnt_result = "discharged-acceleration-battery-pack",
     subgroup = "intermediate-product",
     order = "s-b[battery-pack]",
@@ -175,8 +175,8 @@ data:extend({{
     },
     fuel_category = "electrical",
     fuel_value = "240MJ",
-    fuel_acceleration_multiplier_quality_bonus = 0.5,
-    fuel_top_speed_multiplier_quality_bonus = 0.5,
+    fuel_acceleration_multiplier_quality_bonus = 0.25,
+    fuel_top_speed_multiplier_quality_bonus = 0.25,
     burnt_result = "discharged-efficiency-battery-pack",
     subgroup = "intermediate-product",
     order = "s-c[battery-pack]",
