@@ -5,6 +5,7 @@ Date: XX. 10. 2024
     - Both charging stations can connect to the circuit network and support 2.0 assembling machine logic. (Set recipe, read ingredients, working + completed status)
     - Charging stations have been given module slots (2 for standard and 4 for experimental) (efficiency or speed modules)
     - Charging stations can now be affected by beacons (efficiency or speed effects)
+    - Support for quality and recyling! Powerpacks have acceleration and speed modifiers. (Top tip - put quality modules in your charging stations and make sure to adjust charging and refurb recipes as well as logistic filters for higher tier packs. Also, don't put charged packs in a recycler, that can only go badly...)
     - Included "Extended" (3x Vanilla) start up settings for fluid wagon capacity, and max speeds. Thanks to H4ckerxx44 for the PR
   Bugfixes:
     - Reimplemented lighting/reflection graphics that were no longer accessible from update 2.0.
